--- a/src/template.html
+++ b/src/template.html
@@ -5,5 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
   </head>
-  <body></body>
+  <body>
+
+    <div class="city-name"></div>
+    <div class="weather-container">
+      <div class="icon"></div>
+      <div class="weather"></div>
+      <div class="temp"></div>
+    </div>
+
+  </body>
 </html>
