--- a/src/template.html
+++ b/src/template.html
@@ -7,11 +7,39 @@
   </head>
   <body>
 
+    <form action="">
+      <label for="city">City</label>
+      <input type="text" name="city" id="city">
+      <button type="submit">Go</button>
+    </form>
+
     <div class="city-name"></div>
-    <div class="weather-container">
-      <div class="icon"></div>
-      <div class="weather"></div>
-      <div class="temp"></div>
+
+    <div class="all-weather">
+      <div class="weather-container-now container">
+        <h2>Now</h2>
+        <div class="icon"></div>
+        <div class="weather"></div>
+        <div class="temp"></div>
+      </div>
+      <div class="weather-container-today container">
+        <h2>Today</h2>
+        <div class="icon"></div>
+        <div class="weather"></div>
+        <div class="temp"></div>
+      </div>
+      <div class="weather-container-tomorrow container">
+        <h2>Tomorrow</h2>
+        <div class="icon"></div>
+        <div class="weather"></div>
+        <div class="temp"></div>
+      </div>
+      <div class="weather-container-next container">
+        <h2>Next Day</h2>
+        <div class="icon"></div>
+        <div class="weather"></div>
+        <div class="temp"></div>
+      </div>
     </div>
 
   </body>
