--- a/src/template.html
+++ b/src/template.html
@@ -7,17 +7,10 @@
   </head>
   <body>
 
-    <form action="">
-      <label for="city">City</label>
-      <input type="text" name="city" id="city">
-      <button type="submit">Go</button>
-    </form>
-
     <div class="city-name"></div>
 
     <div class="all-weather">
       <div class="weather-container-now container">
-        <h2>Now</h2>
         <div class="icon"></div>
         <div class="weather"></div>
         <div class="temp"></div>
@@ -41,6 +34,13 @@
         <div class="temp"></div>
       </div>
     </div>
+
+    
+
+    <form action="">
+      <input type="text" name="city" id="city" placeholder="City">
+      <button type="submit">Go</button>
+    </form>
 
   </body>
 </html>
