--- a/src/template.html
+++ b/src/template.html
@@ -11,36 +11,50 @@
 
     <div class="all-weather">
       <div class="weather-container-now container">
-        <div class="icon"></div>
-        <div class="weather"></div>
-        <div class="temp"></div>
+        <div class="icon">😵</div>
+        <div class="weather">Loading...</div>
+        <div class="temp">Loading...</div>
       </div>
       <div class="weather-container-today container">
         <h2>Today</h2>
-        <div class="icon"></div>
-        <div class="weather"></div>
-        <div class="temp"></div>
+        <div class="icon">😵</div>
+        <div class="weather">Loading...</div>
+        <div class="temp">Loading...</div>
       </div>
       <div class="weather-container-tomorrow container">
         <h2>Tomorrow</h2>
-        <div class="icon"></div>
-        <div class="weather"></div>
-        <div class="temp"></div>
+        <div class="icon">😵</div>
+        <div class="weather">Loading...</div>
+        <div class="temp">Loading...</div>
       </div>
       <div class="weather-container-next container">
         <h2>Next Day</h2>
-        <div class="icon"></div>
-        <div class="weather"></div>
-        <div class="temp"></div>
+        <div class="icon">😵</div>
+        <div class="weather">Loading...</div>
+        <div class="temp">Loading...</div>
       </div>
     </div>
 
-    
 
-    <form action="">
-      <input type="text" name="city" id="city" placeholder="City">
-      <button type="submit">Go</button>
-    </form>
+    <div class="controls">
+
+      <div class="temp-switch">
+        <button class="f active">°F</button>
+        <button class="c">°C</button>
+      </div>
+
+      <form action="">
+        <input type="text" name="city" id="city" placeholder="City">
+        <button type="submit">Go</button>
+      </form>
+
+    </div>
+
+    <footer>
+      <div class="copyright">
+          Copyright © 2025 <a href="https://github.com/cobbland">Jacob Densford</a>
+      </div>
+    </footer>
 
   </body>
 </html>
